<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="c347.rp.edu.sg.p08_googlemaps.MainActivity">


    <TextView
        android:id="@+id/tvCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abc" />

    <TextView
        android:id="@+id/tvCompanyInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/branches" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonNorth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/north" />

        <Button
            android:id="@+id/buttonCentral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/central" />

        <Button
            android:id="@+id/buttonEast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/east" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
